<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.8</version>
        <relativePath/>
    </parent>

    <groupId>com.qiheng</groupId>
    <artifactId>erp-server</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>erp-server</name>

    <modules>
        <module>erp-common</module>
        <module>erp-security</module>
        <module>erp-system</module>
        <module>erp-product</module>
        <module>erp-warehouse</module>
        <module>erp-purchase</module>
        <module>erp-sales</module>
        <module>erp-ai</module>
        <module>erp-job</module>
        <module>erp-admin</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <mybatis-plus.version>3.5.15</mybatis-plus.version>
        <mybatis-plus-join.version>1.5.7</mybatis-plus-join.version>
        <mybatis-plus.jsqlparser.version>3.5.15</mybatis-plus.jsqlparser.version>
        <sa-token.version>1.45.0</sa-token.version>
        <knife4j.version>4.5.0</knife4j.version>
        <rocketmq-spring.version>2.3.6</rocketmq-spring.version>
        <hutool.version>5.8.46</hutool.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <easyexcel.version>4.0.3</easyexcel.version>
        <guava.version>33.4.8-jre</guava.version>
        <minio.version>8.5.17</minio.version>
        <redisson.version>3.46.0</redisson.version>
        <spring-ai.version>1.1.2</spring-ai.version>
        <spring-ai-alibaba.version>1.1.2.0</spring-ai-alibaba.version>
        <spring-ai-alibaba-extensions.version>1.1.2.1</spring-ai-alibaba-extensions.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- ===== Spring AI BOM（后续 AI 模块使用，MVP 暂不引入） ===== -->
            <!--
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud.ai</groupId>
                <artifactId>spring-ai-alibaba-bom</artifactId>
                <version>${spring-ai-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud.ai</groupId>
                <artifactId>spring-ai-alibaba-extensions-bom</artifactId>
                <version>${spring-ai-alibaba-extensions.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            -->

            <!-- ===== 内部模块 ===== -->
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-security</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-system</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-product</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-warehouse</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-purchase</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-sales</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-ai</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.qiheng</groupId>
                <artifactId>erp-job</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- ===== MyBatis-Plus ===== -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <!-- MyBatis-Plus 的 SQL 解析器，提供更强大的 SQL 构建和解析能力 -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-jsqlparser</artifactId>
                <version>${mybatis-plus.jsqlparser.version}</version>
            </dependency>

            <!-- MyBatis-Plus Join -->
            <dependency>
                <groupId>com.github.yulichang</groupId>
                <artifactId>mybatis-plus-join-boot-starter</artifactId>
                <version>${mybatis-plus-join.version}</version>
            </dependency>

            <!-- ===== Sa-Token ===== -->
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-spring-boot3-starter</artifactId>
                <version>${sa-token.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.dev33</groupId>
                <artifactId>sa-token-redis-jackson</artifactId>
                <version>${sa-token.version}</version>
            </dependency>

            <!-- ===== Knife4j ===== -->
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>

            <!-- ===== RocketMQ ===== -->
            <dependency>
                <groupId>org.apache.rocketmq</groupId>
                <artifactId>rocketmq-spring-boot-starter</artifactId>
                <version>${rocketmq-spring.version}</version>
            </dependency>

            <!-- ===== Hutool ===== -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <!-- ===== MapStruct ===== -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- ===== EasyExcel ===== -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>

            <!-- ===== Guava ===== -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- ===== MinIO ===== -->
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>

            <!-- ===== Redisson ===== -->
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <version>${redisson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>